ipc/ipdl/test/ipdl/ok/PselfRecUnion.ipdl
union R {
    int;
    double;
    R;
};

protocol PselfRecUnion {
child:
    async Test(R r);
    async __delete__();
};
